Configure Cirrus CI
According to https://cirrus-ci.org/examples/#android

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,3 +26,6 @@ POM_LICENCE_DIST=repo
 
 POM_DEVELOPER_ID=jacksgong
 POM_DEVELOPER_NAME=Jacksgong.com.
+
+org.gradle.caching=true
+org.gradle.parallel=true
